fix alignment of avatar on blog post and size issue on screen under 1200px wide

--- a/src/css/dgu-drupal.less
+++ b/src/css/dgu-drupal.less
@@ -472,7 +472,7 @@ body.page-blog .view-blogs .views-row {
     @media (min-width: 991px) {
       position: absolute;
       left: -19.5%;
-      top:-0.8%;
+      top:0;
     }
     @media (max-width: 500px) {
       display: none;
@@ -484,6 +484,9 @@ body.page-blog .view-blogs .views-row {
       -webkit-border-radius: 60px;
       -moz-border-radius: 60px;
       border-radius: 60px;
+      @media (max-width: 1200px) {
+        width:95px;
+      }
     }
   }
 }
